<resources>
    <string name="app_name">Plate Swipe</string>
    <string name="title_activity_main">Plate Swipe</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="default_web_client_id">308109588643-14cdmrd4mgdqns8sn27i9p25cm2b0mlq.apps.googleusercontent.com</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="fridge_ingredients_description">Fridge Ingredients description</string>

    <string name="plate_swipe_title">Plate Swipe</string>

    <string name="search_bar_place_holder">Search</string>
    <string name="add_to_recipe">Add to Recipe</string>
...
    //PublishRecipeScreen
    <string name="done_text">Done !</string>
    <string name="publish_recipe_button">Publish Recipe</string>

    //RecipeIngredientScreen
    <string name="list_ingredients">List the ingredients needed for your recipe. Add as many as you need.</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="no_ingredients">No Ingredients</string>
    <string name="quantity">Quantity</string>

    //RecipeInstructionsScreen
    <string name="add_instructions">Add Instructions</string>
    <string name="describe_instructions">Describe each step of how to prepare your dish.</string>
...
    //PlateSwipeDropdownMenu
    <string name="no_item_selected">None selected</string>

    //RemoveRecipePopUp
    <string name="message_pop_up_delete_created">Are you sure that you want to delete this recipe?</string>
    <string name="message_pop_up_remove_liked">Are you sure that you want to remove this recipe from your liked recipes?</string>
    <string name="pop_up_confirm_removal_liked_recipe">Yes</string>>
    <string name="pop_up_confirm_cancel_removal_liked_recipe">No</string>

    //CategoryScreen
    <string name="optional_information">Optional Information</string>
    <string name="select_information_description_optional">Giving this information is optional, but it can make it easier for others to find your recipe.</string>
    <string name="select_category">Select a Category</string>
    <string name="select_difficulty">Select a Difficulty</string>
...
    <string name="date_of_birth_label">Date of birth</string>
    <string name="confirm_date_of_birth_pop_up">Confirm</string>
    <string name="cancel_date_of_birth_pop_up">Cancel</string>
    <string name="username_label">Username</string>
    <string name="email_label">Email</string>

    //Fridge
    <string name="fridge_title">Fridge</string>
    <string name="empty_fridge_title">Empty Fridge</string>
    <string name="empty_fridge_description">Your fridge is currently empty, click below to add ingredient</string>
    <string name="date_pattern">dd/MM/yyyy</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="expiration_date">Expiration Date:</string>
    <string name="pop_up_title_fridge">Add to fridge?</string>
    <string name="pop_up_description_fridge">Do you want to add this ingredient to your fridge?</string>
    <string name="pop_up_confirmation_fridge">Add to fridge</string>
    <string name="expired">Expired</string>




    // RecipeList utils
    <string name="edit_recipe_icon_description">Edit Recipe</string>
...
